versions/v2.8/modules/en/pages/cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc
= Setting up Cloud Providers
:revdate: 2024-09-26
:page-revdate: {revdate}

A _cloud provider_ is a module in Kubernetes that provides an interface for managing nodes, load balancers, and networking routes.

When a cloud provider is set up in Rancher, the Rancher server can automatically provision new nodes, load balancers or persistent storage devices when launching Kubernetes definitions, if the cloud provider you're using supports such automation.

Your cluster will not provision correctly if you configure a cloud provider cluster of nodes that do not meet the prerequisites.

By default, the *Cloud Provider* option is set to `None`.

The following cloud providers can be enabled:

* Amazon
* Azure
* GCE (Google Compute Engine)
* vSphere

== Setting up the Amazon Cloud Provider

For details on enabling the Amazon cloud provider, refer to xref:cluster-deployment/set-up-cloud-providers/amazon.adoc[this page.]

== Setting up the Azure Cloud Provider

For details on enabling the Azure cloud provider, refer to xref:cluster-deployment/set-up-cloud-providers/azure.adoc[this page.]

== Setting up the GCE Cloud Provider

For details on enabling the Google Compute Engine cloud provider, refer to xref:cluster-deployment/set-up-cloud-providers/google-compute-engine.adoc[this page.]

== Setting up the vSphere Cloud Provider

For details on enabling the vSphere cloud provider, refer to xref:cluster-deployment/set-up-cloud-providers/configure-in-tree-vsphere.adoc[in-tree vSphere config] and xref:cluster-deployment/set-up-cloud-providers/configure-out-of-tree-vsphere.adoc[out-of-tree vSphere config].

== Setting up a Custom Cloud Provider

The `Custom` cloud provider is available if you want to configure any Kubernetes cloud provider.

For the custom cloud provider option, you can refer to the https://rancher.com/docs/rke/latest/en/config-options/cloud-providers/[RKE docs] on how to edit the yaml file for your specific cloud provider. There are specific cloud providers that have more detailed configuration:

* https://rke.docs.rancher.com/config-options/cloud-providers/vsphere[vSphere]
* https://rancher.com/docs/rke/latest/en/config-options/cloud-providers/openstack/[OpenStack]
